# tkyprof

./: .gitignore  .gitmodules  Application.hs  Foundation.hs  ProfilingReport.hs  README.markdown  Settings.hs  TKYProf.hs  TODO.md  devel.hs  tkyprof.cabal
Handler/: Home.hs  Reports.hs
Settings/: StaticFiles.hs
config/: StaticFiles.hs  models  routes2  settings.yml
deploy/: Procfile
scripts/: insert-projects.sh
src/: Application.hs  Foundation.hs
src/Handler/: Home.hs
src/Handler/Reports/: Helpers.hs
src/TKYProf/: Application.hs  Controller.hs  Model.hs
src/TKYProf/Controller/: EventReport.hs  HeapReport.hs  Home.hs  Internal.hs  Project.hs  TimeAllocReport.hs
src/TKYProf/Model/: EventReport.hs  HeapReport.hs  Internal.hs  Project.hs  TimeAllocReport.hs
static/js/: batman.jquery.js  batman.js  batman.paginator.js  modernizr.js
templates/: default-layout-wrapper.hamlet  default-layout.hamlet  header.hamlet  home.hamlet  tkyprof.coffee
