name:                 tkyprof
version:              0.0.6.3
license:              BSD3
license-file:         LICENSE
author:               Mitsutoshi Aoe
maintainer:           Mitsutoshi Aoe <maoe@foldr.in>
copyright:            Copyright (C) 2011 Mitsutoshi Aoe
synopsis:             A web-based visualizer for GHC profiling reports
description:          A web-based visualizer for GHC time and allocation profiling reports. It helps you find the performance bottlenecks of your code quickly.
category:             Development
stability:            Experimental
cabal-version:        >= 1.9.2
build-type:           Simple
homepage:             https://github.com/maoe/tkyprof
bug-reports:          https://github.com/maoe/tkyprof/issues
tested-with:          GHC == 7.0.3

data-files:           static/js/d3.layout.min.js
                      static/js/d3.min.js
                      static/js/jquery.fileupload.js
                      static/js/jquery.iframe-transport.js
                      static/js/jquery.pjax.js
                      static/js/jquery.ui.widget.js
                      static/js/tkyprof.js
                      static/images/*.png
                      config/favicon.png
                      config/setttings.yml
                      LICENSE
                      README.markdown

extra-source-files:   config/routes
                      hamlet/*.hamlet
                      julius/*.julius
                      lucius/*.lucius

flag production
  description:        Build the production executable.
  default:            True

flag devel
  description:        Build for use with "yesod devel"
  default:            False

library
  exposed-modules:    Application
                      Settings

  hs-source-dirs:     .
  other-modules:      Foundation
                      Handler.Home
                      Handler.Reports
                      Handler.Reports.Helpers
                      Model
                      Paths_tkyprof
                      ProfilingReport
                      Settings.StaticFiles
                      Paths_tkyprof

  build-depends:      base >= 4 && < 5
                    , aeson-native >= 0.3 && < 0.4
                    , attoparsec >= 0.9 && < 0.10
                    , attoparsec-enumerator >= 0.2 && < 0.3
                    , bytestring >= 0.9 && < 0.10
                    , clientsession >= 0.7 && < 0.8
                    , containers < 0.5
                    , data-object >= 0.3 && < 0.4
                    , data-object-yaml >= 0.3 && < 0.4
                    , directory < 2
                    , enumerator >= 0.4 && < 0.5
                    , filepath >= 1.1 && < 2
                    , hamlet >= 0.10 && < 0.11
                    , mtl >= 1.1 && < 3
                    , rosezipper >= 0.2 && < 0.3
                    , shakespeare-css >= 0.10 && < 0.11
                    , shakespeare-js >= 0.10 && < 0.11
                    , shakespeare-text >= 0.10 && < 0.11
                    , stm < 3
                    , template-haskell < 3
                    , text >= 0.11 && < 0.12
                    , time >= 1.2 && < 1.3
                    , transformers >= 0.2 && < 0.3
                    , vector >= 0.6 && < 1
                    , wai >= 0.4 && < 0.5
                    , wai-extra >= 0.4 && < 0.5
                    , web-routes >= 0.23 && < 0.26
                    , yesod-core >= 0.9.1.1 && < 0.10
                    , yesod-form >= 0.3 && < 0.4
                    , yesod-json >= 0.2 && < 0.3
                    , yesod-static >= 0.3 && < 0.4


executable tkyprof-server
  if flag(production)
    ghc-options:      -Wall -O2 -threaded
    cpp-options:      -DPRODUCTION
  else
    ghc-options:      -Wall -threaded

  main-is:            tkyprof-server.hs
  hs-source-dirs:     bin
  build-depends:      tkyprof
                    , base >= 4 && < 5
                    , yesod-core >= 0.9.1.1 && < 0.10
                    , directory
                    , cmdargs >= 0.7 && < 0.8
                    , warp >= 0.4 && < 0.5

executable prof2json
  buildable:          False
  hs-source-dirs:     ., bin
  main-is:            prof2json.hs
  build-depends:      filepath
                    , mtl
                    , blaze-builder

source-repository head
  type:               git
  location:           git@github.com:maoe/tkyprof.git
