name:                 tkyprof
version:              0.0.6.3
license:              BSD3
license-file:         LICENSE
author:               Mitsutoshi Aoe
maintainer:           Mitsutoshi Aoe <maoe@foldr.in>
copyright:            Copyright (c) 2011 Mitsutoshi Aoe
synopsis:             A web-based visualizer for GHC profiling reports
description:          A web-based visualizer for GHC time and allocation profiling reports. It helps you find the performance bottlenecks of your code quickly.
category:             Development
stability:            Experimental
cabal-version:        >= 1.9.2
build-type:           Simple
homepage:             https://github.com/maoe/tkyprof
bug-reports:          https://github.com/maoe/tkyprof/issues
tested-with:          GHC == 7.0.3

data-files:           static/js/d3.layout.min.js
                      static/js/d3.min.js
                      static/js/jquery.fileupload.js
                      static/js/jquery.iframe-transport.js
                      static/js/jquery.pjax.js
                      static/js/jquery.ui.widget.js
                      static/js/tkyprof.js
                      static/images/*.png
                      config/favicon.png
                      config/settings.yml
                      LICENSE
                      README.markdown

extra-source-files:   config/routes
                      hamlet/*.hamlet
                      julius/*.julius
                      lucius/*.lucius

flag production
  description:        Build the production executable.
  default:            True

flag devel
  description:        Build for use with "yesod devel"
  default:            False

library
  if flag(devel)
    ghc-options:      -Wall -threaded

  exposed-modules:    Application
                      Settings

  hs-source-dirs:     .
  other-modules:      Foundation
                      Handler.Home
                      Handler.Reports
                      Handler.Reports.Helpers
                      Model
                      Paths_tkyprof
                      ProfilingReport
                      Settings.StaticFiles
                      Paths_tkyprof

  build-depends:      base >= 4 && < 5
                    , aeson
                    , attoparsec
                    , attoparsec-conduit
                    , bytestring
                    , clientsession
                    , conduit
                    , containers
                    , hamlet
                    , hjsmin
                    , http-types
                    , mtl
                    , rosezipper
                    , shakespeare-text
                    , stm
                    , template-haskell
                    , text
                    , time
                    , transformers
                    , unordered-containers
                    , vector
                    , wai
                    , yesod-core
                    , yesod-default
                    , yesod-form
                    , yesod-platform == 1.0.4.1
                    , yesod-static

executable tkyprof-server
  if flag(production)
    ghc-options:      -Wall -O2 -threaded
    cpp-options:      -DPRODUCTION
  else
    ghc-options:      -Wall -threaded

  main-is:            tkyprof-server.hs
  hs-source-dirs:     bin
  build-depends:      base
                    , tkyprof
                    , yesod-default

executable prof2json
  buildable:          False
  hs-source-dirs:     ., bin
  main-is:            prof2json.hs
  build-depends:      filepath
                    , mtl
                    , blaze-builder

source-repository head
  type:               git
  location:           git@github.com:maoe/tkyprof.git
