name:                 tkyprof
version:              0.0.6.3
license:              BSD3
license-file:         LICENSE
author:               Mitsutoshi Aoe
maintainer:           Mitsutoshi Aoe <maoe@foldr.in>
copyright:            Copyright (c) 2011 Mitsutoshi Aoe
synopsis:             A web-based visualizer for GHC profiling reports
description:          A web-based visualizer for GHC time and allocation profiling reports. It helps you find the performance bottlenecks of your code quickly.
category:             Development
stability:            Experimental
cabal-version:        >= 1.9.2
build-type:           Simple
homepage:             https://github.com/maoe/tkyprof
bug-reports:          https://github.com/maoe/tkyprof/issues
tested-with:          GHC == 7.0.3

data-files:           static/js/d3.layout.min.js
                      static/js/d3.min.js
                      static/js/jquery.fileupload.js
                      static/js/jquery.iframe-transport.js
                      static/js/jquery.pjax.js
                      static/js/jquery.ui.widget.js
                      static/js/tkyprof.js
                      static/images/*.png
                      config/favicon.png
                      config/settings.yml
                      LICENSE
                      README.markdown

extra-source-files:   config/routes
                      config/routes2
                      config/models
                      templates/*.hamlet
                      templates/*.coffee
                      templates/*.lucius

flag production
  description:        Build the production executable.
  default:            True

flag devel
  description:        Build for use with "yesod devel"
  default:            False

library
  ghc-options:        -Wall -threaded

  exposed-modules:    TKYProf.Application

  hs-source-dirs:     src
  other-modules:      Paths_tkyprof
                      ProfilingReport
                      Settings
                      Settings.StaticFiles
                      Paths_tkyprof
                      TKYProf.Model.Internal
                      TKYProf.Model.Project
                      TKYProf.Model.TimeAllocReport
                      TKYProf.Model.HeapReport
                      TKYProf.Model.EventReport
                      TKYProf.Controller
                      TKYProf.Controller.Internal
                      TKYProf.Controller.Home
                      TKYProf.Controller.Project
                      TKYProf.Controller.TimeAllocReport
                      TKYProf.Controller.HeapReport
                      TKYProf.Controller.EventReport

  build-depends:      base >= 4 && < 5
                    , aeson
                    , attoparsec
                    , attoparsec-conduit
                    , bytestring
                    , clientsession
                    , conduit
                    , containers
                    , directory
                    , hamlet
                    , hjsmin
                    , http-types
                    , lifted-base
                    , mtl
                    , persistent
                    , persistent-sqlite
                    , persistent-template
                    , rosezipper
                    , shakespeare-js
                    , shakespeare-text
                    , stm
                    , template-haskell
                    , text
                    , time
                    , transformers
                    , unordered-containers
                    , vector
                    , wai
                    , yesod-core
                    , yesod-default
                    , yesod-form
                    , yesod-json
                    , yesod-persistent
                    , yesod-platform == 1.0.4.1
                    , yesod-static

executable tkyprof
  if flag(production)
    ghc-options:      -Wall -O2 -threaded
    cpp-options:      -DPRODUCTION
  else
    ghc-options:      -Wall -threaded

  main-is:            tkyprof.hs
  hs-source-dirs:     bin
  build-depends:      base
                    , tkyprof
                    , wai-extra
                    , warp
                    , yesod-core
                    , yesod-default

executable prof2json
  buildable:          False
  hs-source-dirs:     ., bin
  main-is:            prof2json.hs
  build-depends:      filepath
                    , mtl
                    , blaze-builder

source-repository head
  type:               git
  location:           git@github.com:maoe/tkyprof.git
